Exercises solutions updated, starting lab 5

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
   <string name="save_placemark">Save Placemark</string>
   <string name="button_addImage">Add Image</string>
   <string name="select_placemark_image">Select Placemark Image</string>
+  <string name="change_placemark_image">Change Placemark image</string>
 </resources>
