--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
   <string name="button_addImage">Add Image</string>
   <string name="select_placemark_image">Select Placemark Image</string>
   <string name="change_placemark_image">Change Placemark image</string>
+  <string name="button_location">Set Location</string>
 </resources>
