--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
   <string name="select_placemark_image">Select Placemark Image</string>
   <string name="change_placemark_image">Change Placemark image</string>
   <string name="button_location">Set Location</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
