--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
   <string name="select_placemark_image">Select Placemark Image</string>
   <string name="change_placemark_image">Change Placemark image</string>
   <string name="button_location">Set Location</string>
-    <string name="title_activity_maps">Map</string>
+  <string name="title_activity_maps">Map</string>
+  <string name="menu_deletePlacemark">Delete</string>
 </resources>
