--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="menu_deletePlacemark">Delete</string>
     <string name="title_activity_placemark_maps">Map of All Placemarks</string>
+    <string name="menu_savePlacemark">Save</string>
 </resources>
